# email2signal

./: Dockerfile  README.md  app.py  flake.nix  pyproject.toml
email2signal/: app.py
