[tool.poetry]
name = "email2signal"
version = "2.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
html2text = "^2024.2.26"
requests = "^2.31.0"
aiosmtpd = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
